// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BtcLabel when unit is BTC renders -0.02784 BTC correctly 1`] = `
<Text
  style={
    Array [
      Object {
        "fontFamily": "System",
        "fontWeight": "400",
      },
      Object {
        "color": "#000000",
      },
      undefined,
    ]
  }
>
  -
  2,784,000 sats
</Text>
`;

exports[`BtcLabel when unit is BTC renders 0 BTC correctly 1`] = `
<Text
  style={
    Array [
      Object {
        "fontFamily": "System",
        "fontWeight": "400",
      },
      Object {
        "color": "#000000",
      },
      undefined,
    ]
  }
>
  0 BTC
</Text>
`;

exports[`BtcLabel when unit is BTC renders 0.00000002 BTC correctly 1`] = `
<Text
  style={
    Array [
      Object {
        "fontFamily": "System",
        "fontWeight": "400",
      },
      Object {
        "color": "#000000",
      },
      undefined,
    ]
  }
>
  0.00000002 BTC
</Text>
`;

exports[`BtcLabel when unit is BTC renders 0.00002001 BTC correctly 1`] = `
<Text
  style={
    Array [
      Object {
        "fontFamily": "System",
        "fontWeight": "400",
      },
      Object {
        "color": "#000000",
      },
      undefined,
    ]
  }
>
  0.00002001 BTC
</Text>
`;

exports[`BtcLabel when unit is BTC renders 2 BTC correctly 1`] = `
<Text
  style={
    Array [
      Object {
        "fontFamily": "System",
        "fontWeight": "400",
      },
      Object {
        "color": "#000000",
      },
      undefined,
    ]
  }
>
  2 BTC
</Text>
`;

exports[`BtcLabel when unit is BTC renders 2.00 BTC correctly 1`] = `
<Text
  style={
    Array [
      Object {
        "fontFamily": "System",
        "fontWeight": "400",
      },
      Object {
        "color": "#000000",
      },
      undefined,
    ]
  }
>
  2 BTC
</Text>
`;

exports[`BtcLabel when unit is BTC renders 2.30 BTC correctly 1`] = `
<Text
  style={
    Array [
      Object {
        "fontFamily": "System",
        "fontWeight": "400",
      },
      Object {
        "color": "#000000",
      },
      undefined,
    ]
  }
>
  2.3 BTC
</Text>
`;

exports[`BtcLabel when unit is BTC renders 4000 BTC correctly 1`] = `
<Text
  style={
    Array [
      Object {
        "fontFamily": "System",
        "fontWeight": "400",
      },
      Object {
        "color": "#000000",
      },
      undefined,
    ]
  }
>
  4,000 BTC
</Text>
`;

exports[`BtcLabel when unit is Satoshis renders -0.08 BTC correctly 1`] = `
<Text
  style={
    Array [
      Object {
        "fontFamily": "System",
        "fontWeight": "400",
      },
      Object {
        "color": "#000000",
      },
      undefined,
    ]
  }
>
  -
  8,000,000 sats
</Text>
`;

exports[`BtcLabel when unit is Satoshis renders 0 BTC correctly 1`] = `
<Text
  style={
    Array [
      Object {
        "fontFamily": "System",
        "fontWeight": "400",
      },
      Object {
        "color": "#000000",
      },
      undefined,
    ]
  }
>
  0 sats
</Text>
`;

exports[`BtcLabel when unit is Satoshis renders 0.00000002 BTC correctly 1`] = `
<Text
  style={
    Array [
      Object {
        "fontFamily": "System",
        "fontWeight": "400",
      },
      Object {
        "color": "#000000",
      },
      undefined,
    ]
  }
>
  2 sats
</Text>
`;

exports[`BtcLabel when unit is Satoshis renders 0.00002001 BTC correctly 1`] = `
<Text
  style={
    Array [
      Object {
        "fontFamily": "System",
        "fontWeight": "400",
      },
      Object {
        "color": "#000000",
      },
      undefined,
    ]
  }
>
  2,001 sats
</Text>
`;

exports[`BtcLabel when unit is Satoshis renders 2 BTC correctly 1`] = `
<Text
  style={
    Array [
      Object {
        "fontFamily": "System",
        "fontWeight": "400",
      },
      Object {
        "color": "#000000",
      },
      undefined,
    ]
  }
>
  200,000,000 sats
</Text>
`;

exports[`BtcLabel when unit is mBTC renders -1.4234 BTC correctly 1`] = `
<Text
  style={
    Array [
      Object {
        "fontFamily": "System",
        "fontWeight": "400",
      },
      Object {
        "color": "#000000",
      },
      undefined,
    ]
  }
>
  -
  1,423.4 mBTC
</Text>
`;

exports[`BtcLabel when unit is mBTC renders 0 BTC correctly 1`] = `
<Text
  style={
    Array [
      Object {
        "fontFamily": "System",
        "fontWeight": "400",
      },
      Object {
        "color": "#000000",
      },
      undefined,
    ]
  }
>
  0 mBTC
</Text>
`;

exports[`BtcLabel when unit is mBTC renders 0.00000002 BTC correctly 1`] = `
<Text
  style={
    Array [
      Object {
        "fontFamily": "System",
        "fontWeight": "400",
      },
      Object {
        "color": "#000000",
      },
      undefined,
    ]
  }
>
  0.00002 mBTC
</Text>
`;

exports[`BtcLabel when unit is mBTC renders 0.00002001 BTC correctly 1`] = `
<Text
  style={
    Array [
      Object {
        "fontFamily": "System",
        "fontWeight": "400",
      },
      Object {
        "color": "#000000",
      },
      undefined,
    ]
  }
>
  0.02001 mBTC
</Text>
`;

exports[`BtcLabel when unit is mBTC renders 2 BTC correctly 1`] = `
<Text
  style={
    Array [
      Object {
        "fontFamily": "System",
        "fontWeight": "400",
      },
      Object {
        "color": "#000000",
      },
      undefined,
    ]
  }
>
  2,000 mBTC
</Text>
`;

exports[`BtcLabel when unit is undefined renders without errors 1`] = `
<Text
  style={
    Array [
      Object {
        "fontFamily": "System",
        "fontWeight": "400",
      },
      Object {
        "color": "#000000",
      },
      undefined,
    ]
  }
>
  ❓
</Text>
`;
